--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="lits supperposés" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hébergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="lits supperposés" class="imgCard111"/></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Auberge La canebière</h3>
                                     <div class="scriptCard1">Nuit à partir de 25€</div>
