--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="lits supperposés" class="imgCard111"/></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="lits supperposés" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Auberge La canebière</h3>
                                     <div class="scriptCard1">Nuit à partir de 25€</div>
@@ -102,7 +102,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" lits double et simple" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=" lits double et simple" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Hôtel du port</h3>
                                     <div class="scriptCard1">Nuit à partir de 52€</div>
@@ -124,7 +124,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="mirroir" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="mirroir" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Hôtel Les mouettes</h3>
                                     <div class="scriptCard1">Nuit à partir de 76€</div>
@@ -148,7 +148,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="vagues" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="vagues" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Hôtel de la mer</h3>
                                     <div class="scriptCard1">Nuit à partir de 46€</div>
@@ -170,7 +170,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="cosy" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="cosy" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Auberge Le Panier</h3>
                                     <div class="scriptCard1">Nuit à partir de 23€</div>
@@ -192,7 +192,7 @@
                     <a class="acards1" href="#">
                         <div class="case11">
                             <div class="case1">
-                                <div class="imgCard111"><img src="./images/hébergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chaise bois" class="imgCard111"></div>
+                                <div class="imgCard111"><img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chaise bois" class="imgCard111"></div>
                                 <div class="txtCard1">
                                     <h3 class="titleCard1">Hôtel chez Amina</h3>
                                     <div class="scriptCard1">Nuit à partir de 96€</div> 
@@ -223,7 +223,7 @@
                     <a class="acards2" href="#">
                         <div class="case22">    
                             <div class="case2">
-                                <div class="imgCard222"><img src="./images/hébergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=" green wood" class="imgCard222"></div>
+                                <div class="imgCard222"><img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=" green wood" class="imgCard222"></div>
                                 <div class="txtCard2">
                                     <h3 class="titleCard2">Hôtel Le soleil du matin</h3>
                                     <div class="scriptCard2">Nuit à partir de 128€</div>
@@ -245,7 +245,7 @@
                     <a class="acards2" href="#">
                         <div class="case22">
                             <div class="case2">
-                                <div class="imgCard222"><img src="./images/hébergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="mezzanine" class="imgCard222"></div>
+                                <div class="imgCard222"><img src="./images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="mezzanine" class="imgCard222"></div>
                                 <div class="txtCard2">
                                     <h3 class="titleCard2">Chambres d'hôtes Au<br>coeur de l'eau</h3>
                                     <div class="scriptCard2">Nuit à partir de 71€</div> 
@@ -267,7 +267,7 @@
                     <a class="acards2" href="#">
                         <div class="case22">
                             <div class="case2">
-                                <div class="imgCard222"><img src="./images/hébergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="liseret lit" class="imgCard222"></div>
+                                <div class="imgCard222"><img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="liseret lit" class="imgCard222"></div>
                                 <div class="txtCard2">
                                     <h3 class="titleCard2">Hôtel Bleu et Blanc</h3>
                                     <div class="scriptCard21">Nuit à partir de 68€</div>
@@ -294,7 +294,7 @@
             <a class="acards3" href="#">
                 <div class="case33">
                     <div class="case3">
-                        <div class="imgCard3333"><img src="./images/activités/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="plaisance" class="imgCard3333"></div>
+                        <div class="imgCard3333"><img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="plaisance" class="imgCard3333"></div>
                         <div class="txtCard3"><b>Vieux-port</b></div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
             <a class="acards3" href="#">
                 <div class="case33">
                     <div class="case3">
-                        <div class="imgCard3333"><img src="./images/activités/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort" class="imgCard3333"></div>
+                        <div class="imgCard3333"><img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort" class="imgCard3333"></div>
                         <div class="txtCard3"><b>Fort de Pomègues</b></div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
             <a class="acards3" href="#">
                 <div class="case33">
                     <div class="case3">
-                        <div class="imgCard3333"><img src="./images/activités/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="calanques" class="imgCard3333"></div>
+                        <div class="imgCard3333"><img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="calanques" class="imgCard3333"></div>
                         <div class="txtCard33"><b>Parc national des Calanques</b></div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
             <a class="acards3" href="#">
                 <div class="case33">
                     <div class="case3">
-                        <div class="imgCard3333"><img src="./images/activités/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="N-D-d-l-G" class="imgCard3333">
+                        <div class="imgCard3333"><img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="N-D-d-l-G" class="imgCard3333">
                     </div>
                     <div class="txtCard34"><b>Notre-Dame-de-la-garde</b></div>
                 </div>
